# uiao-core

./: .env.example  .gitattributes  .gitignore  .gitmodules  00_ControlPlaneArchitecture.md  00_CorePrinciples.md  02_CanonSpecification.md  07_LeadershipBriefing.md  09_CrosswalkIndex.md  12_AI_SecurityPrinciples.md  14_TIC3_F5RetirementRoadmap.md  15_ProvenanceProfile.md  16_DriftDetectionStandard.md  17_ConsentEnvelope.md  18_ClaimCatalog.md  19_ReconciliationModel.md  AGENTS.md  BRIEFING-SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COPILOT-INTEGRATION-LOG.md  NOTICE  PHASE5_ComplianceContinuity.md  PHASE5_ContinuousComplianceEngine.md  PHASE5_ExecutiveDashboard.md  PHASE5_IncidentResponseIntegration.md  PHASE5_KnowledgeTransfer.md  PHASE5_OperationalGovernance.md  PHASE5_RuntimeDriftModel.md  PHASE5_TelemetryEvidenceMap.md  PROJECT-CONTEXT.md  README.md  RELEASE_NOTES.md  SECURITY.md  UIAO-7DAY-GRADING-RUBRIC.md  UIAO-MEMORY.md  USAGE.md  _quarto.yml  appendices.md  (+30 more)
01_Canon/: uiao-reference.docx
adapters/: __init__.py  adapter-contract.md  adapter-responsibilities-diagram-set.md  base_adapter.py  database-adapter-drift-detection.md
adr/: 0001-package-restructure.md  0001-week1-critique.md  0002-testing-and-ssp-migration.md  0002-week2-critique.md  0003-config-hardening-dependency-consolidation.md  0003-week3-critique.md  0004-final-migration-lint-dry-and-pilot-packaging.md  0004-week4-critique.md  0005-dev-repo-promotion-workflow.md
analytics/: atlas_dashboard.json
architecture/: README.md  index.html
artifacts/: authorization-boundary.docx  control-plane-architecture.docx  system-architecture.docx
bench/: cache.bench.ts
canon/: DIAGRAM-STANDARDS.md  diagrams.yaml  uiao_leadership_briefing_v1.0.yaml  uiao_operational_handover_v1.0.yaml  uiao_pitch_deck_v1.0.yaml  uiao_project_plan_v1.0.yaml  visual_manifest_v1.0.yaml
comparison/: index.html
compliance_readiness/: index.html
data/: appendices.yml  atlas-appendices.yml  canon-spec.yml  cisa_zt_mapping.yml  control-planes.yml  core-stack.yml  diagrams.yml  document-skeleton.yml  fedramp-20x.yml  fedramp_ssp_template_structure.yaml  inventory-items.yml  ksi-mappings.yml  leadership-briefing.yml  mermaid-config.json  monitoring-sources.yml  nist_crosswalk.yml  (+13 more)
(+719 files in other folders)
